# MasterResearch

Experiment/: CMakeLists.txt  Calibration.cpp  Calibration.h  Disparity.cpp  Disparity.h  ImageUtils.cpp  ImageUtils.h  RealEquipment.cpp  RealEquipment.h  Sensor.cpp  Sensor.h  SimilarityMeasure.cpp  SimilarityMeasure.h  StereoGC.cpp  StereoGC.h  test.cpp  test0.cpp  test10_PnP.cpp  test10_hand-eye_calibration.cpp  test11_refinement_kitti_data.cpp  test11_step3.cpp  test12_error_calculation.cpp  test1_experiment_old.cpp  test2.cpp  test2_data_capturing.cpp  test3.cpp  test4.cpp  test4_point_cloud_transfer.cpp  test5.cpp  test5_calibration_old.cpp  test6.cpp  test6_calibration.cpp  test6_refinement_self_data.cpp  test7.cpp  test7_pcl_transformation.cpp  test8_pcl_icp.cpp  test9_edge_based_refinement.cpp
Projection1/: LiDAR2BirdEyeView.py  LiDAR2FrontView.py  test.py
Projection2/: CMakeLists.txt  test.cpp
python_utils/: image.py  plot.py  scatter3D.py
